<package>
	<name>motoman_mh24_support</name>
	<version>0.3.5</version>
	<license>Apache v2.0</license>
	<maintainer email="maarten@de-vri.es">Maarten de Vries</maintainer>
	<author email="maarten@de-vri.es">Maarten de Vries</author>

	<url type="bugtracker">https://github.com/ros-industrial/motoman/issues</url>
	<url type="repository">https://github.com/ros-industrial/motoman</url>

	<description>
		<p>
			ROS Industrial support for the Yaskawa Motoman MH24.
		</p>
		<p>
			This package contains configuration data, 3D models and launch files
			for Motoman MH24 manipulators.
		</p>
		<p>
			<b>Specifications</b>
		</p>
		<ul>
			<li>mh24 - Default</li>
		</ul>
		<p>
			Joint limits and maximum joint velocities are based on the information
			found in the online
			http://www.motoman.com/datasheets/mh24.pdf
			All urdfs are based on the default motion and joint velocity limits,
			unless noted otherwise.
		</p>
		<p>
			Before using any of the configuration files and / or meshes included
			in this package, be sure to check they are correct for the particular
			robot model and configuration you intend to use them with.
		</p>
	</description>

	<buildtool_depend>catkin</buildtool_depend>
	<test_depend>roslaunch</test_depend>
	<run_depend>motoman_driver</run_depend>
	<run_depend>robot_state_publisher</run_depend>
	<run_depend>rviz</run_depend>
	<run_depend>joint_state_publisher</run_depend>

	<export>
		<architecture_independent/>
	</export>
</package>
